--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gunny</title>
     <link rel="stylesheet" href="src/styles.css">
+    <script src="node_modules/image-capture/lib/imagecapture.min.js"></script>
 </head>
 
 <body>
